--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        users: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Set Short SHA
         run: |
           echo "SHORT_SHA=${echo ${GITHUB_SHA} | cut -c1-7}" >> $GITHUB_ENV
