--- a/complete-devops-project-time-printer/values.yaml
+++ b/complete-devops-project-time-printer/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: ramzihaj2001/complete-devops-project
-  tag: latest
+#  tag: latest
   pullPolicy: IfNotPresent
 service:
   type: ClusterIP
