--- a/complete-devops-project-time-printer/values.yaml
+++ b/complete-devops-project-time-printer/values.yaml
@@ -5,7 +5,12 @@ image:
 service:
   type: ClusterIP
   port: 8080
-
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  annotations: {}
+  # The name of the service account to use. If not set and create is true, a name is generated using the fullname template
+  name: ""
 ingress:
   enabled: false
 autoscaling:
